# Capstone_CSTAR

./: README.md
MainBoard/: cstar-audio.kicad_sch  cstar-drive.kicad_sch  cstar-io.kicad_sch  cstar-lidar.kicad_sch  cstar-mcu.kicad_sch  cstar-power.kicad_sch
MainBoard/CSTAR-MainBoard-Footprints.pretty/: 691137710002-2CONN.kicad_mod  AMASS_XT60PW-M.kicad_mod  B2P-VH.kicad_mod  Buck-05-08-1604_ADI.kicad_mod  CONN12_DX07S_JAE.kicad_mod  D14.kicad_mod  D2PAK_STM.kicad_mod  DRV8842PWPR-PWP0028C_N.kicad_mod  EM78P153SN.kicad_mod  HRO_TYPE-C-31-M-12.kicad_mod  IC9_AP63356QZV-7_DIO.kicad_mod  IRFHM9331TRPBF.kicad_mod  L1_2.2uH.kicad_mod  L2_6.8uH.kicad_mod  LED_0VS75000_WRE.kicad_mod  LM324N.kicad_mod  MAX3232.kicad_mod  MODULE_ESP32-WROOM-32UE_M113EH6400UH3Q0_.kicad_mod  MOLEX_532610771.kicad_mod  PW0016A-IPC_A.kicad_mod  QFN28_5X5_SIL.kicad_mod  SMCJSeries_LTF.kicad_mod  TL074.kicad_mod  (+7 more)
MicBoard/: #auto_saved_files#  AK5720VT.kicad_sym  CON_532610771.kicad_mod  MicBoard.kicad_pcb  MicBoard.kicad_pro  MicBoard.kicad_sch  MicBoard.step  fp-lib-table
UltrasonicsBoard/: UltrasonicsBoard.kicad_pro  UltrasonicsBoard.kicad_sch
examples/: bluetooth_host.py  fft.py  fft_on_wav.py  sinewave_reader.py
src/: README.md  test_lidar.cpp  test_lidar.h
src/ESP1/: Audio.cpp  Audio.h  Bluetooth.cpp  Bluetooth.h  CMakeLists.txt  ESP1.ino  IO.cpp  IO.h  UART.cpp  UART.h
src/ESP2/: CMakeLists.txt  ESP2.ino  Encoder.cpp  Encoder.h  LiDAR.cpp  LiDAR.h  Motor.cpp  Motor.h  Motor_Drive.cpp  Motor_Drive.h  SensorFusion.cpp  SensorFusion.h  UART_2.cpp  UART_2.h  Ultrasonic.cpp  Ultrasonic.h
(+65 files in other folders)
